chapter04b_argocd/Kustomize/overlays/prd/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-by-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app.prd.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: handson
            port:
              name: http
